--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-native-thirdparty-demo",
-  "version": "1.0.0",
-  "private": true,
+  "version": "1.0.1",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -23,11 +22,23 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2"
   },
+  "keywords": [
+    "Header",
+    "CustomHeader"
+  ],
   "jest": {
     "preset": "react-native"
   },
+  "bugs": {
+    "url": "https://github.com/ronaktristate/react-native-thirdparty-demo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ronaktristate/react-native-thirdparty-demo.git"
+  },
+  "homepage": "https://github.com/ronaktristate/react-native-thirdparty-demo",
   "description": "How to create third party package for react native",
   "main": "index.js",
-  "author": "",
+  "author": "RonakKotak",
   "license": "ISC"
 }
